--- a/cricket.html
+++ b/cricket.html
@@ -33,6 +33,9 @@
      win : 0,
      lose : 0,
      tie: 0,
+     displayScore : function(){
+      return 'won: ${score.win} lost: ${score.lose} tie: ${score.tie}`)
+     }
   };
 
   function generateComputerChoice(){
